@@ -22,9 +22,11 @@ package org.neo4j.internal.batchimport.input.parquet;
 import static org.neo4j.util.Preconditions.checkState;
 
 import blue.strategic.parquet.ParquetReader;
+import java.io.BufferedReader;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -36,10 +38,13 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.function.Function;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 import org.apache.parquet.column.ColumnDescriptor;
 import org.apache.parquet.hadoop.metadata.BlockMetaData;
 import org.apache.parquet.hadoop.metadata.ColumnChunkMetaData;
@@ -47,6 +52,7 @@ import org.apache.parquet.hadoop.metadata.ParquetMetadata;
 import org.apache.parquet.io.DelegatingSeekableInputStream;
 import org.apache.parquet.io.InputFile;
 import org.apache.parquet.io.SeekableInputStream;
+import org.eclipse.collections.api.factory.Lists;
 import org.neo4j.batchimport.api.InputIterable;
 import org.neo4j.batchimport.api.input.Collector;
 import org.neo4j.batchimport.api.input.IdType;
@@ -54,19 +60,24 @@ import org.neo4j.batchimport.api.input.Input;
 import org.neo4j.batchimport.api.input.PropertySizeCalculator;
 import org.neo4j.batchimport.api.input.ReadableGroups;
 import org.neo4j.cloud.storage.io.ReadableChannel;
+import org.neo4j.csv.reader.Configuration;
 import org.neo4j.internal.batchimport.input.Groups;
 import org.neo4j.internal.batchimport.input.HeaderException;
 import org.neo4j.internal.batchimport.input.InputException;
+import org.neo4j.internal.batchimport.input.csv.DataFactories;
 import org.neo4j.internal.schema.SchemaCommand;
 import org.neo4j.internal.schema.SchemaDescriptor;
 import org.neo4j.internal.schema.SchemaDescriptors;
 import org.neo4j.token.TokenHolders;
 import org.neo4j.token.api.TokenConstants;
+import org.neo4j.util.Preconditions;
 
 /**
  * Provides {@link Input} from data contained in Parquet files.
  */
 public class ParquetInput implements Input {
+    public static final char DELIMITER =
+            '\u0007'; // BEL char as in {@link org.neo4j.internal.batchimport.input.csv.IdValueBuilder}
     private static final Supplier<ZoneId> defaultTimezoneSupplier = () -> ZoneOffset.UTC;
 
     private final List<ParquetData> nodeDatas;
@@ -75,60 +86,42 @@ public class ParquetInput implements Input {
     private final IdType idType;
     private final Groups groups;
     private final ParquetMonitor monitor;
+    // this is used for header mapping parsing only
+    private final Configuration csvConfig;
     private final Map<Set<String>, List<Path[]>> nodeFiles;
     private final Map<String, List<Path[]>> relationshipFiles;
-    private final Map<Path, List<ParquetColumn>> verifiedColumns;
-    private final String arrayDelimiter;
-
-    public ParquetInput(
-            Map<Set<String>, List<Path[]>> nodeFiles,
-            Map<String, List<Path[]>> relationshipFiles,
-            IdType idType,
-            Character arrayDelimiter,
-            Groups groups,
-            ParquetMonitor monitor) {
-        this(nodeFiles, relationshipFiles, Collections.emptyList(), idType, arrayDelimiter, groups, monitor);
-    }
+    private final List<ParquetColumnMetadata> verifiedColumns;
 
     public ParquetInput(
             Map<Set<String>, List<Path[]>> nodeFiles,
             Map<String, List<Path[]>> relationshipFiles,
             List<SchemaCommand> schemaCommands,
             IdType idType,
-            Character arrayDelimiter,
+            Configuration csvConfig,
             Groups groups,
             ParquetMonitor monitor) {
         this.idType = idType;
         this.groups = groups;
         this.monitor = monitor;
-        this.arrayDelimiter = arrayDelimiter.toString();
+        this.csvConfig = csvConfig;
         this.nodeFiles = nodeFiles;
         this.relationshipFiles = relationshipFiles;
         this.schemaCommands = schemaCommands;
-
         this.verifiedColumns = verifyColumns(nodeFiles, relationshipFiles);
-        this.nodeDatas = nodeFiles.entrySet().stream()
-                .flatMap(e -> e.getValue().stream().map(p -> Map.entry(e.getKey(), p)))
-                .flatMap(e -> Arrays.stream(e.getValue()).map(p -> Map.entry(e.getKey(), p)))
-                .map(e -> new ParquetData(
-                        e.getKey(), e.getValue(), verifiedColumns.get(e.getValue()), defaultTimezoneSupplier))
-                .toList();
-        this.relationshipDatas = relationshipFiles.entrySet().stream()
-                .flatMap(e -> e.getValue().stream().map(p -> Map.entry(e.getKey(), p)))
-                .flatMap(e -> Arrays.stream(e.getValue()).map(p -> Map.entry(e.getKey(), p)))
-                .map(e -> new ParquetData(
-                        Set.of(e.getKey()), e.getValue(), verifiedColumns.get(e.getValue()), defaultTimezoneSupplier))
-                .toList();
+        this.nodeDatas = nodeData(verifiedColumns, nodeFiles);
+        this.relationshipDatas = relationshipData(verifiedColumns, relationshipFiles);
     }
 
     @Override
     public InputIterable nodes(Collector badCollector) {
-        return () -> new ParquetGroupInputIterator(nodeDatas, groups, idType, arrayDelimiter);
+        return () ->
+                new ParquetGroupInputIterator(nodeDatas, groups, idType, String.valueOf(csvConfig.arrayDelimiter()));
     }
 
     @Override
     public InputIterable relationships(Collector badCollector) {
-        return () -> new ParquetGroupInputIterator(relationshipDatas, groups, idType, arrayDelimiter);
+        return () -> new ParquetGroupInputIterator(
+                relationshipDatas, groups, idType, String.valueOf(csvConfig.arrayDelimiter()));
     }
 
     @Override
@@ -146,19 +139,155 @@ public class ParquetInput implements Input {
         return schemaCommands;
     }
 
-    private Map<Path, List<ParquetColumn>> verifyColumns(
+    private static List<ParquetData> nodeData(
+            List<ParquetColumnMetadata> verifiedColumns, Map<Set<String>, List<Path[]>> nodeFiles) {
+        return parquetData(verifiedColumns, EntityType.NODE, nodeFiles, ParquetInput::extractExternalLabels);
+    }
+
+    private static List<ParquetData> relationshipData(
+            List<ParquetColumnMetadata> verifiedColumns, Map<String, List<Path[]>> relationshipFiles) {
+        return parquetData(
+                verifiedColumns, EntityType.RELATIONSHIP, relationshipFiles, ParquetInput::extractExternalRelType);
+    }
+
+    private static <KEY> List<ParquetData> parquetData(
+            List<ParquetColumnMetadata> verifiedColumns,
+            EntityType entityType,
+            Map<KEY, List<Path[]>> files,
+            Function<KEY, Set<String>> keyExtractor) {
+
+        var indexedMetadata = verifiedColumns.stream()
+                .filter(verifiedColumn -> verifiedColumn.entityType == entityType)
+                // **not** using toMap (which rejects key duplicates)
+                // labels (or reltypes) can reuse the same data files with different mappings
+                // this also means we need to deduplicate parquet data in such cases
+                .collect(Collectors.groupingBy(ParquetColumnMetadata::key));
+
+        var deduplicatedColumnData = new LinkedHashSet<ParquetData>();
+        files.forEach((rawLabelsOrType, allPaths) -> {
+            for (var paths : allPaths) {
+                for (var path : paths) {
+                    if (!isHeaderFile(path)) {
+                        var labelsOrType = keyExtractor.apply(rawLabelsOrType);
+                        var metadataKey = new ParquetColumnMetadataKey(path, labelsOrType);
+                        var allMetadata = indexedMetadata.get(metadataKey);
+                        for (ParquetColumnMetadata metadata : allMetadata) {
+                            deduplicatedColumnData.add(new ParquetData(
+                                    entityType, labelsOrType, path, metadata.columns(), defaultTimezoneSupplier));
+                        }
+                    }
+                }
+            }
+        });
+        final var columnData = Lists.mutable.<ParquetData>empty();
+        columnData.addAll(deduplicatedColumnData);
+        return columnData;
+    }
+
+    private static class HeaderContext {
+        private final Set<Set<String>> nodeHeaders = new HashSet<>();
+        private final Set<String> relationshipHeaders = new HashSet<>();
+
+        private final Map<List<Path>, Map<String, ParquetColumn.HeaderDefinition>> headerColumnNameDefinitions =
+                new HashMap<>();
+        private final Map<List<Path>, Map<Integer, ParquetColumn.HeaderDefinition>> headerColumnIndexDefinitions =
+                new HashMap<>();
+
+        private void reset() {
+            nodeHeaders.clear();
+            relationshipHeaders.clear();
+        }
+
+        private void setHeaderFileExistsFor(Set<String> labels) {
+            nodeHeaders.add(labels);
+        }
+
+        private boolean hasHeader(Set<String> labels) {
+            return nodeHeaders.contains(labels);
+        }
+
+        private void setHeaderFileExistsFor(String type) {
+            relationshipHeaders.add(type);
+        }
+
+        private boolean hasHeader(String type) {
+            return relationshipHeaders.contains(type);
+        }
+
+        private void addHeaderDefinition(
+                List<Path> files, String columnName, ParquetColumn.HeaderDefinition headerDefinition) {
+            headerColumnNameDefinitions.putIfAbsent(files, new HashMap<>());
+            headerColumnNameDefinitions.get(files).put(columnName, headerDefinition);
+        }
+
+        private void addHeaderDefinition(
+                List<Path> files, Integer index, ParquetColumn.HeaderDefinition headerDefinition) {
+            headerColumnIndexDefinitions.putIfAbsent(files, new HashMap<>());
+            headerColumnIndexDefinitions.get(files).put(index, headerDefinition);
+        }
+
+        private ParquetColumn.HeaderDefinition getHeaderDefinition(List<Path> files, Integer index, String columnName) {
+            if (headerColumnNameDefinitions.get(files) != null) {
+                return headerColumnNameDefinitions.get(files).get(columnName);
+            }
+
+            if (headerColumnIndexDefinitions.get(files) != null) {
+                return headerColumnIndexDefinitions.get(files).get(index).addParquetColumnName(columnName);
+            }
+
+            return new ParquetColumn.SingleRowHeaderDefinition(columnName);
+        }
+
+        private boolean isNotIncludedInHeaderDefinition(List<Path> value, Integer index, String columnName) {
+            return (headerColumnNameDefinitions.containsKey(value)
+                            && !headerColumnNameDefinitions.get(value).containsKey(columnName))
+                    || (headerColumnIndexDefinitions.containsKey(value)
+                            && !headerColumnIndexDefinitions.get(value).containsKey(index));
+        }
+
+        private boolean columnShouldBeSkipped(Set<String> labels, List<Path> nodeFiles, int index, String columnName) {
+            return hasHeader(labels) && isNotIncludedInHeaderDefinition(nodeFiles, index, columnName);
+        }
+
+        private boolean columnShouldBeSkipped(String type, List<Path> relationshipFiles, int index, String columnName) {
+            return hasHeader(type) && isNotIncludedInHeaderDefinition(relationshipFiles, index, columnName);
+        }
+
+        private void ensureAllColumnsExist(Path nodeFile, Set<String> columnNames) {
+            var headers = headerColumnNameDefinitions.entrySet().stream()
+                    .filter(entry -> entry.getKey().contains(nodeFile))
+                    .flatMap(entry -> entry.getValue().keySet().stream())
+                    .collect(Collectors.toSet());
+
+            if (!columnNames.containsAll(headers)) {
+                var errorHeaders = new ArrayList<>(headers);
+                errorHeaders.removeAll(columnNames);
+                throw new InputException("Target column(s) '%s' from header cannot be found in %s."
+                        .formatted(errorHeaders, nodeFile.toString()));
+            }
+        }
+    }
+
+    private List<ParquetColumnMetadata> verifyColumns(
             Map<Set<String>, List<Path[]>> labelsAndNodeFiles, Map<String, List<Path[]>> typeAndRelationshipFiles) {
 
-        Map<Path, List<ParquetColumn>> columnInfo = new HashMap<>();
+        var headerContext = new HeaderContext();
+
+        List<ParquetColumnMetadata> columnInfo = new ArrayList<>();
         try {
             for (Map.Entry<Set<String>, List<Path[]>> labelsAndNodeFilesEntry : labelsAndNodeFiles.entrySet()) {
-                var hasLabelColumn = !labelsAndNodeFilesEntry.getKey().isEmpty()
-                        && labelsAndNodeFilesEntry.getKey().stream().anyMatch(label -> !label.isBlank());
+                var labels = labelsAndNodeFilesEntry.getKey();
+                var hasLabelColumn = !labels.isEmpty() && labels.stream().anyMatch(label -> !label.isBlank());
                 var nodeFiles = labelsAndNodeFilesEntry.getValue().stream()
                         .flatMap(Arrays::stream)
-                        .toList();
+                        .collect(Collectors.toList());
+
                 for (Path nodeFile : nodeFiles) {
-                    ParquetMetadata metadata = null;
+                    if (processPotentialHeaderFile(nodeFile, nodeFiles, headerContext)) {
+                        headerContext.setHeaderFileExistsFor(labels);
+                        continue;
+                    }
+                    ParquetMetadata metadata;
                     try {
                         metadata = ParquetReader.readMetadata(ParquetImportInputFile.of(nodeFile));
                     } catch (RuntimeException e) {
@@ -168,16 +297,37 @@ public class ParquetInput implements Input {
                     var currentColumnInfo = new ArrayList<ParquetColumn>();
                     var propertyNames = new HashSet<String>();
                     String previousGroupName = null;
-                    var columns = metadata.getFileMetaData().getSchema().getColumns();
+                    var schema = metadata.getFileMetaData().getSchema();
+                    var columns = schema.getColumns();
+                    if (headerContext.hasHeader(labels)) {
+                        headerContext.ensureAllColumnsExist(
+                                nodeFile,
+                                columns.stream().map(cd -> cd.getPath()[0]).collect(Collectors.toSet()));
+                    }
+                    Set<String> mapColumns = new HashSet<>();
+                    Set<String> structColumns = new HashSet<>();
                     // check for possible group / ID space definitions and register them
                     String fileName = nodeFile.getFileName().toString();
-                    for (ColumnDescriptor columnDescriptor : columns) {
-                        var columnName = columnDescriptor.getPath()[0];
+                    boolean hasIdColumn = false;
+                    for (int i = 0; i < columns.size(); i++) {
+                        ColumnDescriptor columnDescriptor = columns.get(i);
+                        String[] namePath = columnDescriptor.getPath();
+                        var columnName = namePath[0];
+                        var type = schema.getType(columnName);
+
                         if (columnName.isBlank()) {
                             throw new InputException("column name must not be blank");
                         }
                         try {
-                            var parquetColumn = ParquetColumn.from(columnName, EntityType.NODE);
+                            // ignore missing column in header definition
+                            if (headerContext.columnShouldBeSkipped(labels, nodeFiles, i, columnName)) {
+                                continue;
+                            }
+                            var parquetColumn = ParquetColumn.from(
+                                    headerContext.getHeaderDefinition(nodeFiles, i, columnName),
+                                    EntityType.NODE,
+                                    columnDescriptor.getPrimitiveType(),
+                                    type.getLogicalTypeAnnotation());
                             if (parquetColumn.isIgnoredColumn()) {
                                 continue;
                             }
@@ -191,18 +341,37 @@ public class ParquetInput implements Input {
                                 }
                                 previousGroupName = parquetColumn.groupName();
                             }
+                            if (hasIdColumn && parquetColumn.isIdColumn()) {
+                                Preconditions.checkState(
+                                        idType == IdType.STRING,
+                                        "Having multiple :ID columns requires idType: " + IdType.STRING);
+                            }
+                            if (parquetColumn.isIdColumn()) {
+                                hasIdColumn = true;
+                            }
                             if (propertyNames.contains(propertyName) && parquetColumn.isIdColumn()) {
                                 throw new DuplicatedColumnException(
                                         "Cannot store composite IDs as properties, only individual part. Property %s / File: %s"
                                                 .formatted(propertyName, fileName));
                             }
-                            if (propertyNames.contains(propertyName)) {
+                            var firstPropertyNamePart =
+                                    propertyName.contains(".") ? propertyName.split("\\.")[0] : propertyName;
+
+                            if ((propertyNames.contains(propertyName) || propertyNames.contains(firstPropertyNamePart))
+                                    && !mapColumns.contains(propertyName)
+                                    && !structColumns.contains(propertyName)) {
                                 throw new DuplicatedColumnException("Duplicated header property %s found in file %s."
                                         .formatted(propertyName, fileName));
                             }
                             propertyNames.add(propertyName);
+
                             if (parquetColumn.logicalColumnType() == ParquetLogicalColumnType.ID) {
-                                groups.getOrCreate(parquetColumn.groupName());
+                                var columnIdType = parquetColumn.columnIdType();
+                                if (columnIdType != null) {
+                                    groups.getOrCreate(parquetColumn.groupName(), columnIdType.name());
+                                } else {
+                                    groups.getOrCreate(parquetColumn.groupName());
+                                }
                             }
                             if (parquetColumn.columnType().needsConversion()) {
                                 monitor.typeNormalized(
@@ -217,28 +386,45 @@ public class ParquetInput implements Input {
                             if (parquetColumn.logicalColumnType() == ParquetLogicalColumnType.LABEL) {
                                 hasLabelColumn = true;
                             }
-                            currentColumnInfo.add(parquetColumn);
+                            // Avoid duplicate columns
+                            if (!mapColumns.contains(propertyName)) {
+                                currentColumnInfo.add(parquetColumn);
+                            }
+                            if (namePath.length > 1 && "key_value".equals(namePath[1])) {
+                                mapColumns.add(propertyName);
+                            } else if (namePath.length > 1) {
+                                structColumns.add(propertyName);
+                            }
                         } catch (IllegalArgumentException e) {
-                            throw new InputException("Column name " + columnName
-                                    + " is used as a special type but is unknown. Allowed types are "
-                                    + ParquetColumn.getReservedColumns(EntityType.NODE));
+                            throw new InputException(
+                                    "Column name " + columnName
+                                            + " is used as a special type but is unknown. Allowed types are "
+                                            + ParquetColumn.getReservedColumns(EntityType.NODE),
+                                    e);
                         }
                     }
                     if (!hasLabelColumn) {
                         monitor.noNodeLabelsSpecified(fileName);
                     }
-                    columnInfo.put(nodeFile, currentColumnInfo);
+                    var metadataKey = new ParquetColumnMetadataKey(nodeFile, extractExternalLabels(labels));
+                    columnInfo.add(new ParquetColumnMetadata(metadataKey, EntityType.NODE, currentColumnInfo));
                 }
             }
-
             for (Map.Entry<String, List<Path[]>> typeAndRelationshipFilesEntry : typeAndRelationshipFiles.entrySet()) {
-
+                var relType = typeAndRelationshipFilesEntry.getKey();
+                var hasTypeColumn = relType != null && !relType.isBlank();
                 // parse all relationship headers and verify all ID spaces
                 var relationshipFileList = typeAndRelationshipFilesEntry.getValue().stream()
                         .flatMap(Arrays::stream)
-                        .toList();
+                        .collect(Collectors.toList());
+                Set<String> mapColumns = new HashSet<>();
+                Set<String> structColumns = new HashSet<>();
                 for (Path relationshipFile : relationshipFileList) {
-                    ParquetMetadata metadata = null;
+                    if (processPotentialHeaderFile(relationshipFile, relationshipFileList, headerContext)) {
+                        headerContext.setHeaderFileExistsFor(relType);
+                        continue;
+                    }
+                    ParquetMetadata metadata;
                     try {
                         metadata = ParquetReader.readMetadata(ParquetImportInputFile.of(relationshipFile));
                     } catch (RuntimeException e) {
@@ -247,21 +433,34 @@ public class ParquetInput implements Input {
                     }
                     var currentColumnInfo = new ArrayList<ParquetColumn>();
                     var propertyNames = new HashSet<String>();
-                    var columns = metadata.getFileMetaData().getSchema().getColumns();
-                    var hasTypeColumn = typeAndRelationshipFilesEntry.getKey() != null
-                            && !typeAndRelationshipFilesEntry.getKey().isBlank();
+                    var schema = metadata.getFileMetaData().getSchema();
+                    var columns = schema.getColumns();
                     String fileName = relationshipFile.getFileName().toString();
-                    for (ColumnDescriptor columnDescriptor : columns) {
-                        var columnName = columnDescriptor.getPath()[0];
+                    for (int i = 0; i < columns.size(); i++) {
+                        ColumnDescriptor columnDescriptor = columns.get(i);
+                        String[] namePath = columnDescriptor.getPath();
+                        var columnName = namePath[0];
+
+                        var type = schema.getType(columnName);
+
                         try {
-                            var parquetColumn = ParquetColumn.from(columnName, EntityType.RELATIONSHIP);
+                            if (headerContext.columnShouldBeSkipped(relType, relationshipFileList, i, columnName)) {
+                                continue;
+                            }
+                            var parquetColumn = ParquetColumn.from(
+                                    headerContext.getHeaderDefinition(relationshipFileList, i, columnName),
+                                    EntityType.RELATIONSHIP,
+                                    columnDescriptor.getPrimitiveType(),
+                                    type.getLogicalTypeAnnotation());
                             if (parquetColumn.isIgnoredColumn()) {
                                 continue;
                             }
                             String propertyName = parquetColumn.propertyName() != null
                                     ? parquetColumn.propertyName()
                                     : parquetColumn.logicalColumnType().name();
-                            if (propertyNames.contains(propertyName)) {
+                            if (propertyNames.contains(propertyName)
+                                    && !mapColumns.contains(propertyName)
+                                    && !structColumns.contains(propertyName)) {
                                 throw new DuplicatedColumnException("Duplicated header property %s found in file %s."
                                         .formatted(propertyName, fileName));
                             }
@@ -287,14 +486,24 @@ public class ParquetInput implements Input {
                             if (parquetColumn.logicalColumnType() == ParquetLogicalColumnType.TYPE) {
                                 hasTypeColumn = true;
                             }
-                            currentColumnInfo.add(parquetColumn);
+                            // Avoid duplicate columns
+                            if (!mapColumns.contains(propertyName)) {
+                                currentColumnInfo.add(parquetColumn);
+                            }
+                            if (namePath.length > 1 && "key_value".equals(namePath[1])) {
+                                mapColumns.add(propertyName);
+                            }
+                            if (namePath.length > 1) {
+                                structColumns.add(propertyName);
+                            }
                         } catch (IllegalArgumentException e) {
                             throw new InputException("Column name " + columnName
                                     + " is used as a special type but is unknown. Allowed types are "
                                     + ParquetColumn.getReservedColumns(EntityType.RELATIONSHIP));
                         }
                     }
-                    columnInfo.put(relationshipFile, currentColumnInfo);
+                    var metadataKey = new ParquetColumnMetadataKey(relationshipFile, extractExternalRelType(relType));
+                    columnInfo.add(new ParquetColumnMetadata(metadataKey, EntityType.RELATIONSHIP, currentColumnInfo));
 
                     if (!hasTypeColumn) {
                         monitor.noRelationshipTypeSpecified(fileName);
@@ -308,10 +517,75 @@ public class ParquetInput implements Input {
         return columnInfo;
     }
 
+    private static Set<String> extractExternalLabels(Set<String> labels) {
+        return labels;
+    }
+
+    private static Set<String> extractExternalRelType(String typeGroupOrNull) {
+        return typeGroupOrNull == null ? Set.of() : Set.of(typeGroupOrNull);
+    }
+
+    record ParquetColumnMetadata(ParquetColumnMetadataKey key, EntityType entityType, List<ParquetColumn> columns) {}
+
+    record ParquetColumnMetadataKey(Path path, Collection<String> labelsOrType) {}
+
+    private boolean processPotentialHeaderFile(Path path, List<Path> paths, ParquetInput.HeaderContext headerContext)
+            throws IOException {
+        if (!isHeaderFile(path)) {
+            return false;
+        }
+        headerContext.reset();
+        try (var csvInput = new BufferedReader(new InputStreamReader(Files.newInputStream(path)))) {
+            var lines = csvInput.lines().toList();
+            if (lines.isEmpty() || lines.stream().allMatch(String::isBlank)) {
+                throw new IllegalArgumentException("The header definition is empty");
+            }
+            if (lines.size() > 2) {
+                throw new IllegalArgumentException("The header is expected to have one or two lines");
+            }
+            if (lines.size() == 1) { // CSV import style header
+                var targetColumnNames = DataFactories.parseRawHeaderEntries(
+                        path.toString(),
+                        csvConfig,
+                        defaultTimezoneSupplier,
+                        lines.get(0).toCharArray());
+                for (int i = 0; i < targetColumnNames.size(); i++) {
+                    headerContext.addHeaderDefinition(
+                            paths, i, ParquetColumn.HeaderDefinition.from(targetColumnNames.get(i)));
+                }
+            } else { // Parquet import style header;
+                var targetColumnNames = DataFactories.parseRawHeaderEntries(
+                        path.toString(),
+                        csvConfig,
+                        defaultTimezoneSupplier,
+                        lines.get(0).toCharArray());
+                var existingParquetColumns = DataFactories.parseRawHeaderEntries(
+                        path.toString(),
+                        csvConfig,
+                        defaultTimezoneSupplier,
+                        lines.get(1).toCharArray());
+                for (int i = 0; i < targetColumnNames.size(); i++) {
+                    if (existingParquetColumns.size() > i) {
+                        headerContext.addHeaderDefinition(
+                                paths,
+                                existingParquetColumns.get(i),
+                                ParquetColumn.HeaderDefinition.from(
+                                        targetColumnNames.get(i), existingParquetColumns.get(i)));
+                    }
+                }
+            }
+        }
+        return true;
+    }
+
+    private static boolean isHeaderFile(Path path) {
+        return path.toString().endsWith(".csv");
+    }
+
     @Override
     public Map<String, SchemaDescriptor> referencedNodeSchema(TokenHolders tokenHolders) {
-        List<ParquetColumn> idColumns = verifiedColumns.values().stream()
-                .flatMap(Collection::stream)
+        List<ParquetColumn> idColumns = verifiedColumns.stream()
+                .flatMap(metadata -> metadata.columns().stream())
                 .filter(ParquetColumn::isIdColumn)
                 .toList();
         HashMap<String, SchemaDescriptor> result = new HashMap<>();
@@ -357,18 +631,28 @@ public class ParquetInput implements Input {
             mergedLabels.addAll(Collections.unmodifiableSet(nodePathEntries.getKey()));
             for (Path[] nodePaths : nodePathEntries.getValue()) {
                 for (Path nodePath : nodePaths) {
-                    var metadata = ParquetReader.readMetadata(ParquetImportInputFile.of(nodePath));
-                    List<BlockMetaData> blocks = metadata.getBlocks();
-                    for (BlockMetaData block : blocks) {
-                        numberOfNodes += block.getRowCount();
-                        var currentColumnCount = block.getColumns().size();
-                        // This needs to be separated by file/group, or?
-                        if (currentColumnCount > numberOfNodeProperties) {
-                            numberOfNodeProperties = currentColumnCount;
+                    try {
+                        // skip obvious csv head
+                        if (isHeaderFile(nodePath)) {
+                            continue;
                         }
-                        for (ColumnChunkMetaData column : block.getColumns()) {
-                            totalNodePropertiesSize += column.getTotalUncompressedSize();
+                        var metadata = ParquetReader.readMetadata(ParquetImportInputFile.of(nodePath));
+                        List<BlockMetaData> blocks = metadata.getBlocks();
+                        for (BlockMetaData block : blocks) {
+                            numberOfNodes += block.getRowCount();
+                            var currentColumnCount = block.getColumns().size();
+                            // This needs to be separated by file/group, or?
+                            if (currentColumnCount > numberOfNodeProperties) {
+                                numberOfNodeProperties = currentColumnCount;
+                            }
+                            for (ColumnChunkMetaData column : block.getColumns()) {
+                                totalNodePropertiesSize += column.getTotalUncompressedSize();
+                            }
                         }
+                    } catch (RuntimeException e) {
+                        // Silently ignore if a file cannot be read.
+                        // This is 99% caused by header CSVs being part of the import files.
+                        // Unfortunately, we can only ignore at this level because csv files might not be named such
                     }
                 }
             }
@@ -382,22 +666,32 @@ public class ParquetInput implements Input {
         for (Map.Entry<String, List<Path[]>> relationshipFileEntries : relationshipFiles.entrySet()) {
             for (Path[] relationshipPaths : relationshipFileEntries.getValue()) {
                 for (Path relationshipPath : relationshipPaths) {
-                    var metadata = ParquetReader.readMetadata(ParquetImportInputFile.of(relationshipPath));
-                    for (BlockMetaData block : metadata.getBlocks()) {
-                        numberOfNodes += block.getRowCount();
-                        var currentColumnCount = block.getColumns().size();
-                        if (currentColumnCount > numberOfNodeProperties) {
-                            numberOfNodeProperties = currentColumnCount;
+                    try {
+                        // skip obvious csv headers
+                        if (isHeaderFile(relationshipPath)) {
+                            continue;
                         }
-                        for (ColumnChunkMetaData column : block.getColumns()) {
-                            totalRelationshipPropertiesSize += column.getTotalUncompressedSize();
+                        var metadata = ParquetReader.readMetadata(ParquetImportInputFile.of(relationshipPath));
+                        for (BlockMetaData block : metadata.getBlocks()) {
+                            numberOfRelationships += block.getRowCount();
+                            var currentColumnCount = block.getColumns().size();
+                            if (currentColumnCount > numberOfNodeProperties) {
+                                numberOfRelationshipProperties = currentColumnCount;
+                            }
+                            for (ColumnChunkMetaData column : block.getColumns()) {
+                                totalRelationshipPropertiesSize += column.getTotalUncompressedSize();
+                            }
                         }
+                    } catch (RuntimeException e) {
+                        // Silently ignore if a file cannot be read.
+                        // This is 99% caused by header CSVs being part of the import files.
+                        // Unfortunately, we can only ignore at this level because csv files might not be named such
                     }
                 }
             }
         }
 
-        return new Estimates(
+        return Input.knownEstimates(
                 numberOfNodes,
                 numberOfRelationships,
                 numberOfNodeProperties,
@@ -415,21 +709,20 @@ public class ParquetInput implements Input {
             return importFileCache.computeIfAbsent(importFilePath, (any) -> new ParquetImportInputFile(importFilePath));
         }
 
-        private final Path lePath;
+        private final Path filePath;
 
         private ParquetImportInputFile(Path lePath) {
-            this.lePath = lePath;
+            this.filePath = lePath;
         }
 
         @Override
         public long getLength() throws IOException {
-            return Files.size(lePath);
+            return Files.size(filePath);
         }
 
         @Override
         public SeekableInputStream newStream() throws IOException {
-
-            InputStream inputStream = Files.newInputStream(lePath);
+            InputStream inputStream = Files.newInputStream(filePath);
             if (inputStream instanceof ReadableChannel cloudFileChannel) {
                 return new DelegatingSeekableInputStream(inputStream) {
                     private long position = 0;
@@ -446,7 +739,7 @@ public class ParquetInput implements Input {
                     }
                 };
             } else { // assume we have a local file
-                inputStream = new FileInputStream(lePath.toFile());
+                inputStream = new FileInputStream(filePath.toFile());
                 FileInputStream fis = (FileInputStream) inputStream;
                 return new DelegatingSeekableInputStream(fis) {
                     private long position = 0;
@@ -458,11 +751,17 @@ public class ParquetInput implements Input {
 
                     @Override
                     public void seek(long newPos) throws IOException {
+                        //noinspection resource
                         fis.getChannel().position(newPos);
                         position = newPos;
                     }
                 };
             }
+        }
+
+        @Override
+        public String toString() {
+            return "ParquetFile{" + "path=" + filePath + '}';
         }
     }
 }
